--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -6,7 +6,7 @@
 
 .item h3 {
   margin: 0 0 0.5rem 0;
-  font-size: 1.75rem;
+  font-size: 1.3rem;
 }
 
 .item header {
@@ -29,6 +29,8 @@
 .price {
   font-size: 1.5rem;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
 }
 
 .itemprice {
