--- a/src/components/Shop/Products.module.css
+++ b/src/components/Shop/Products.module.css
@@ -1,8 +1,7 @@
-.products h2 {
+.title {
   color: white;
   margin: 2rem auto;
   text-align: center;
-  text-transform: uppercase;
 }
 
 .products ul {
