--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,13 @@ button {
   padding: 0.5rem 1.5rem;
   border-radius: 6px;
   background-color: transparent;
-  color: #1a8ed1;
-  border: 1px solid #1a8ed1;
+  color: #966fff;
+  border: 1px solid #966fff;
 }
 
 button:hover,
 button:active {
-  background-color: #1ac5d1;
-  border-color: #1ac5d1;
+  background-color: #7f51ff;
+  border-color: #7f51ff;
   color: white;
 }
